# trigger

./: .gitignore  error.json
automation_trigger/: Cargo.toml
automation_trigger/src/: main.rs
minimal_example/: Cargo.toml
minimal_example/src/: main.rs
