[package]
name = "minimal_example"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "rustls", "ws", "ethers-solc"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
hex-literal = "0.4.1"
crypto-bigint = "0.5.5"